--- a/local.properties
+++ b/local.properties
@@ -1,2 +1,2 @@
-#Sun Feb 05 20:58:29 IST 2023
-sdk.dir=C\:\\Users\\jugen\\AppData\\Local\\Android\\Sdk
+#Fri Mar 17 12:43:52 IST 2023
+sdk.dir=C\:\\Users\\teva_\\AppData\\Local\\Android\\Sdk
