--- a/local.properties
+++ b/local.properties
@@ -1,8 +1,2 @@
-## This file must *NOT* be checked into Version Control Systems,
-# as it contains information specific to your local configuration.
-#
-# Location of the SDK. This is only used by Gradle.
-# For customization when using a Version Control System, please read the
-# header note.
-#Sun Mar 19 00:39:20 IST 2023
-sdk.dir=C\:\\Users\\jugen\\AppData\\Local\\Android\\Sdk
+#Tue Jul 18 12:06:59 IST 2023
+sdk.dir=C\:\\Users\\teva_\\AppData\\Local\\Android\\Sdk
