--- a/local.properties
+++ b/local.properties
@@ -1,2 +1,8 @@
-#Tue Jul 18 12:06:59 IST 2023
-sdk.dir=C\:\\Users\\teva_\\AppData\\Local\\Android\\Sdk
+## This file must *NOT* be checked into Version Control Systems,
+# as it contains information specific to your local configuration.
+#
+# Location of the SDK. This is only used by Gradle.
+# For customization when using a Version Control System, please read the
+# header note.
+#Tue Jul 18 22:34:47 IST 2023
+sdk.dir=C\:\\Users\\jugen\\AppData\\Local\\Android\\Sdk
