--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jul 18 22:34:47 IST 2023
-sdk.dir=C\:\\Users\\jugen\\AppData\\Local\\Android\\Sdk
+#Mon Jul 31 15:59:11 IST 2023
+sdk.dir=C\:\\Users\\teva_\\AppData\\Local\\Android\\Sdk
