--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jul 31 22:18:45 IST 2023
-sdk.dir=C\:\\Users\\jugen\\AppData\\Local\\Android\\Sdk
+#Wed Dec 28 11:04:10 IST 2022
+sdk.dir=C\:\\Users\\teva_\\AppData\\Local\\Android\\Sdk
