--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Dec 28 11:04:10 IST 2022
-sdk.dir=C\:\\Users\\teva_\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\jugen\\AppData\\Local\\Android\\Sdk
